--- a/static/css/main_style.css
+++ b/static/css/main_style.css
@@ -1289,7 +1289,7 @@ font-weight: bold;
 .tech-card-img {
     width: 100%;
     height: 320px; /* Adjust the height based on your design */
-    object-fit: cover; /* Ensures the image covers the space without distortion */
+    /* object-fit: cover;  */
     /* border-top-left-radius: 10px;
     border-top-right-radius: 10px; */
 
