--- a/static/css/contact_us_style.css
+++ b/static/css/contact_us_style.css
@@ -1285,7 +1285,7 @@ html {
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    /* object-fit: cover; */
     z-index: 1;
 }
 
