--- a/static/css/contact_us_style.css
+++ b/static/css/contact_us_style.css
@@ -697,18 +697,10 @@ html {
 
 /* Feedback container grid layout */
 .feedback-container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr); /* Four cards per row */
-    gap: 20px; /* Space between cards */
-    margin: 0 auto;
-    max-width: 1200px; /* Centered and limited width */
-}
-
-.feedback-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    gap: 30px;
+    justify-content: space-between;
+    gap: 20px;
 }
 
 /* Feedback Card Styling */
@@ -716,17 +708,18 @@ html {
     background: linear-gradient(to bottom right, #f8f3f3, #f2f2f2);
     border-radius: 15px;
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
-    padding: 20px;
+    padding: 10px;
     text-align: center;
     transition: transform 0.5s ease, box-shadow 0.5s ease;
-    flex: 1 1 calc(25% - 40px);
-    max-width: 300px;
+    flex: 1 1 calc(15% - 40px);
+    max-width: 400px;
     position: relative;
     overflow: hidden;
+    
 }
 
 .feedback-card:hover {
-    transform: scale(1.08) translateY(-10px);
+    transform: scale(1.01) translateY(-10px);
     background: linear-gradient(135deg, rgb(207, 217, 243), rgb(179, 183, 247));
     box-shadow: 0 12px 30px rgba(0, 0, 0, 0.3);
 }
